simplify cfg